// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`probar clase citas addCita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:20",
      "id": 1711435048754,
      "mascota": "Hook",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "1232321",
    },
  ],
}
`;

exports[`probar clase citas deleteCita 1`] = `
Citas {
  "citas": [],
}
`;

exports[`probar clase citas editCita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:20",
      "id": 1711435048754,
      "mascota": "Nuevo nombre de mascota",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "1232321",
    },
  ],
}
`;
